# revolut-test-task

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  task-definition.json
.github/workflows/: main.yml
infra/: main.tf
service/: Cargo.toml  Dockerfile  Dockerfile.ci
service/src/: main.rs  views.rs
service/src/entities/: mod.rs  prelude.rs  record.rs
service/src/migrator/: m20220101_000001_create_table.rs
