[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm-cli = "0.12.15"
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
sea-orm-migration = "0.12.15"
syn = "2.0.67"
tinyvec = "1.6.0"
subtle = "2.6.0"
bitflags = "2.5.0"
